[package]
name = "pallet-staking"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/polkadot-sdk/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = { workspace = true, default-features = true }
serde = { workspace = true, features = ["alloc", "derive"]}
codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { workspace = true, features = [
	"derive",
] }
sp-std = { workspace = true }
sp-npos-elections = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true, features = [
	"historical",
] }
pallet-authorship = { workspace = true }
sp-application-crypto = { workspace = true }
pallet-operation = { workspace = true}
pallet-deeper-node = { workspace = true }
pallet-uniques = { workspace = true }
node-primitives = { workspace = true }
log = { workspace = true }
pallet-balances = { workspace = true }
pallet-micropayment = { workspace = true }
pallet-credit = { workspace = true }
pallet-credit-accumulation = { workspace = true }
pallet-evm = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
pallet-user-privileges = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-storage = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
frame-benchmarking = { workspace = true, default-features = true }
pallet-user-privileges = { workspace = true, default-features = true }
pallet-credit-accumulation = { workspace = true, default-features = true }
rand_chacha = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"sp-std/std",
	"scale-info/std",
	"sp-npos-elections/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"node-primitives/std",
	"pallet-deeper-node/std",
	"pallet-balances/std",
	"pallet-micropayment/std",
	"pallet-uniques/std",
	"pallet-credit/std",
	"pallet-user-privileges/std",
	"pallet-credit-accumulation/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand_chacha",
	"hex-literal",
	"pallet-user-privileges",
]
