[package]
name = "pallet-staking_with_credit"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false}
sp-npos-elections = { version = "2.0.0", default-features = false }
sp-io ={ version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false}
sp-staking = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-session = { version = "2.0.0", default-features = false, features = ["historical"] }
pallet-authorship = { version = "2.0.0", default-features = false}
sp-application-crypto = { version = "2.0.0", default-features = false}
pallet-delegating = {version = '2.0.0', default-features = false, path = "../delegating"}
pallet-credit = {version = '2.0.0', default-features = false, path = "../credit"}
pallet-micropayment = {version = '2.0.0', default-features =false, path = "../micropayment"}
pallet-deeper-node = {version = '2.0.0', default-features =false, path = "../deeper-node"}

# Optional imports for benchmarking
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-core = { version = "2.0.0"}
sp-storage = { version = "2.0.0" }
sp-tracing = { version = "2.0.0" }
pallet-balances = { version = "2.0.0", path = "../balances"}
pallet-timestamp = { version = "2.0.0" }
pallet-staking-reward-curve = { version = "2.0.0"}
substrate-test-utils = { version = "2.0.0"}
frame-benchmarking = { version = "2.0.0"}
rand_chacha = { version = "0.2" }
parking_lot = "0.10.2"
hex = "0.4"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-npos-elections/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"pallet-delegating/std",
	"pallet-credit/std",
	"pallet-micropayment/std",
	"pallet-deeper-node/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand_chacha",
]
